k8s/cloudsql-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsql-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsql-proxy
  template:
    metadata:
      labels:
        app: cloudsql-proxy
    spec:
      containers:
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.38.1
        command:
          - "/cloud_sql_proxy"
          - "-instances=tp-final-gke-martin:europe-west1:my-app-db=tcp:5432"
          - "-credential_file=/secrets/gcp/key.json"
        volumeMounts:
          - name: gcp-sa-key
            mountPath: /secrets/gcp
            readOnly: true
      volumes:
        - name: gcp-sa-key
          secret:
            secretName: gcp-sa-key
